Successfully making first call to Amadeus API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=tonysTravelApp
+
+# Server Configuration
+server.port=8080
+
+# Amadeus API Configuration
+amadeus.api.client-id=IOip5CLp9eY8V03EM982GZefBchqOkW3
+amadeus.api.client-secret=CFojIgO8SjMGTOGc
+amadeus.api.token-url=https://test.api.amadeus.com/v1/security/oauth2/token
+amadeus.api.flight-search-url=https://test.api.amadeus.com/v2/shopping/flight-offers
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.example.amadeusapiclient=INFO
