--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
    			<artifactId>gson</artifactId>
    			<version>2.13.1</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20220320</version>
+		</dependency>
 	</dependencies>
 
 	<build>
